--- a/hdortalta.html
+++ b/hdortalta.html
@@ -1,55 +1,144 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html dir="rtl" lang="ar">
 <head>
   <meta charset="UTF-8">
+  <title>عرض الحضور</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>الصفحة الأولى - عرض بيانات Google Sheets</title>
+  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f0f0f0; padding: 20px; }
-    table { border-collapse: collapse; width: 100%; background: white; }
-    th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
-    th { background-color: #4CAF50; color: white; }
+    @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Cairo', sans-serif;
+      background: linear-gradient(145deg, #fce4ec, #e1bee7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      overflow: hidden;
+    }
+    .container {
+      background: #fff;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 8px 24px rgba(123, 31, 162, 0.25);
+      text-align: center;
+      width: 90%;
+      max-width: 420px;
+      z-index: 2;
+      animation: popIn 1s ease;
+    }
+    @keyframes popIn {
+      from { transform: scale(0.9); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+    h2 { color: #8e24aa; margin-bottom: 15px; font-size: 22px; }
+    input[type="text"] {
+      width: 100%;
+      padding: 12px;
+      margin: 15px 0;
+      border-radius: 12px;
+      border: 2px solid #ce93d8;
+      font-size: 16px;
+    }
+    input[type="submit"] {
+      background: #ab47bc;
+      color: white;
+      border: none;
+      padding: 12px;
+      border-radius: 12px;
+      font-size: 17px;
+      cursor: pointer;
+    }
+    input[type="submit"]:hover { background: #8e24aa; }
+    .loading-screen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: #ffffffee;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      flex-direction: column;
+    }
+    .loading-text {
+      font-size: 20px;
+      color: #6a1b9a;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    .result-card {
+      background: #fff8e1;
+      padding: 20px;
+      border-radius: 15px;
+      margin-top: 20px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      animation: fadeIn 0.5s ease;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
-  <h1>📊 بيانات من Google Sheets</h1>
-  <table id="data-table">
-    <thead>
-      <tr id="table-head"></tr>
-    </thead>
-    <tbody id="table-body"></tbody>
-  </table>
+  <div class="container">
+    <h2>الحضور خاص بـ <strong>مستر فيصل</strong></h2>
+    <form id="attendanceForm">
+      <input type="text" id="studentId" placeholder="🔑 أدخل كود الطالب" required>
+      <input type="submit" value="📊 عرض الحضور">
+    </form>
+    <div id="result"></div>
+  </div>
+
+  <div class="loading-screen" id="loadingScreen">
+    <dotlottie-wc
+      src="https://lottie.host/5094a892-ffb3-4075-b0eb-3434638a0404/ZLCk22UywK.lottie"
+      style="width: 100%; max-width: 300px; margin: 0 auto;"
+      speed="1"
+      autoplay
+      loop>
+    </dotlottie-wc>
+    <div class="loading-text">جاري تحميل الحضور... ✅</div>
+  </div>
 
   <script>
-    const sheetURL = "https://docs.google.com/spreadsheets/d/YOUR_SPREADSHEET_ID/gviz/tq?tqx=out:json";
+    const API_URL = "https://script.google.com/macros/s/AKfycbym-mYSGrAK03b9Jc-Cghzp8PCJMBn0350-WYA8CooYODpcuMUOZiYnGz9pOaY2HIXP8w/exec";
+    const form = document.getElementById("attendanceForm");
+    const loadingScreen = document.getElementById("loadingScreen");
+    const resultDiv = document.getElementById("result");
 
-    fetch(sheetURL)
-      .then(res => res.text())
-      .then(data => {
-        const json = JSON.parse(data.substr(47).slice(0, -2));
-        const tableHead = document.getElementById("table-head");
-        const tableBody = document.getElementById("table-body");
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      resultDiv.innerHTML = "";
+      loadingScreen.style.display = "flex";
 
-        // إضافة العناوين
-        json.table.cols.forEach(col => {
-          if (col.label) {
-            let th = document.createElement("th");
-            th.textContent = col.label;
-            tableHead.appendChild(th);
-          }
-        });
+      const id = document.getElementById("studentId").value.trim();
+      try {
+        const res = await fetch(`${API_URL}?id=${encodeURIComponent(id)}`);
+        const data = await res.json();
+        loadingScreen.style.display = "none";
 
-        // إضافة الصفوف
-        json.table.rows.forEach(row => {
-          let tr = document.createElement("tr");
-          row.c.forEach(cell => {
-            let td = document.createElement("td");
-            td.textContent = cell ? cell.v : "";
-            tr.appendChild(td);
-          });
-          tableBody.appendChild(tr);
-        });
-      });
+        if (data.found) {
+          resultDiv.innerHTML = `
+            <div class="result-card">
+              <h3>📋 حضور الطالب</h3>
+              <p><strong>👦 اسم الطالب:</strong> ${data.name}</p>
+              <p><strong>🧭 السنتر:</strong> ${data.geo}</p>
+              <p><strong>📅 الأسبوع 1:</strong> ${data.week1}</p>
+              <p><strong>📅 الأسبوع 2:</strong> ${data.week2}</p>
+            </div>
+          `;
+        } else {
+          resultDiv.innerHTML = `<div class="result-card" style="color:red;">❌ ${data.error}</div>`;
+        }
+      } catch (err) {
+        loadingScreen.style.display = "none";
+        resultDiv.innerHTML = `<div class="result-card" style="color:red;">⚠️ خطأ في الاتصال</div>`;
+      }
+    });
   </script>
 </body>
 </html>
