--- a/hdortalta.html
+++ b/hdortalta.html
@@ -20,7 +20,7 @@
     }
     .container {
       background: #fff;
-      padding: 30px;
+      padding: 25px 20px;
       border-radius: 20px;
       box-shadow: 0 8px 24px rgba(123, 31, 162, 0.25);
       text-align: center;
@@ -33,7 +33,15 @@
       from { transform: scale(0.9); opacity: 0; }
       to { transform: scale(1); opacity: 1; }
     }
-    h2 { color: #8e24aa; margin-bottom: 15px; font-size: 22px; }
+    .gif-box {
+      max-width: 200px;
+      margin: 0 auto 10px auto;
+    }
+    h2 { 
+      color: #8e24aa; 
+      margin-bottom: 15px; 
+      font-size: 22px;
+    }
     input[type="text"] {
       width: 100%;
       padding: 12px;
@@ -50,6 +58,7 @@
       border-radius: 12px;
       font-size: 17px;
       cursor: pointer;
+      transition: background 0.3s ease;
     }
     input[type="submit"]:hover { background: #8e24aa; }
     .loading-screen {
@@ -85,6 +94,15 @@
 </head>
 <body>
   <div class="container">
+    <div class="gif-box">
+      <dotlottie-wc
+        src="https://lottie.host/5094a892-ffb3-4075-b0eb-3434638a0404/ZLCk22UywK.lottie"
+        style="width: 100%;"
+        speed="1"
+        autoplay
+        loop>
+      </dotlottie-wc>
+    </div>
     <h2>الحضور خاص بـ <strong>مستر فيصل</strong></h2>
     <form id="attendanceForm">
       <input type="text" id="studentId" placeholder="🔑 أدخل كود الطالب" required>
