--- a/father.html
+++ b/father.html
@@ -189,7 +189,7 @@
     function goToLink(level) {
       const links = {
         attendance: {
-          "1": "https://www.mrfaisal.net/%D8%AD%D8%B6%D9%88%D8%B1-2%D8%AB",
+          "1": "hdortanyasanwy.html",
           "2": "hdortalta.html"
         },
         grades: {
