--- a/ntigahdortalta.html
+++ b/ntigahdortalta.html
@@ -94,8 +94,8 @@ if (!studentId) {
             <table>
               <tr><th>👦 اسم الطالب</th><td>${name}</td></tr>
               <tr><th>🏫 اسم السنتر</th><td>${geo}</td></tr>
-              <tr><th>📅 الأسبوع 1</th><td>${week1}</td></tr>
-              <tr><th>📅 الأسبوع 2</th><td>${week2}</td></tr>
+              <tr><th>📅 الحصه الاولي</th><td>${week1}</td></tr>
+              <tr><th>📅 الحصه التانيه</th><td>${week2}</td></tr>
             </table>
           `;
           break;
