--- a/hdortanyasanwy.html
+++ b/hdortanyasanwy.html
@@ -7,63 +7,84 @@
   <style>
     body {
       font-family: 'Cairo', sans-serif;
-      background: linear-gradient(135deg, #00bcd4, #009688); /* أزرق فيروزي متدرج */
+      background-color: #e0f7fa; /* أزرق سماوي فاتح */
       margin: 0;
       padding: 0;
       text-align: center;
-      color: white;
     }
-    h1 {
-      margin-top: 40px;
-      font-size: 28px;
-      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+
+    header {
+      padding: 20px;
     }
+
+    header img {
+      width: 150px;
+      height: 150px;
+    }
+
+    header h1 {
+      margin-top: 10px;
+      font-size: 24px;
+      color: #00796b;
+    }
+
     .container {
-      margin-top: 30px;
+      margin-top: 20px;
     }
+
     input {
-      padding: 12px;
+      padding: 10px;
       font-size: 16px;
-      width: 220px;
-      border-radius: 25px;
-      border: none;
-      outline: none;
-      margin-right: 5px;
+      width: 200px;
+      border: 2px solid #00796b;
+      border-radius: 5px;
     }
+
     button {
-      padding: 12px 25px;
+      padding: 10px 20px;
       font-size: 16px;
-      background-color: #ffca28; /* لون أصفر ذهبي */
-      color: #333;
+      background-color: #00796b;
+      color: white;
       border: none;
-      border-radius: 25px;
       cursor: pointer;
-      transition: 0.3s;
-      font-weight: bold;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
     }
+
     button:hover {
-      background-color: #ffc107;
-      transform: scale(1.05);
+      background-color: #004d40;
     }
+
     .card {
-      margin: 25px auto;
+      margin: 20px auto;
       background: white;
       padding: 20px;
       border-radius: 15px;
       width: 300px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
       text-align: right;
-      color: #333;
-      animation: fadeIn 0.6s ease-in-out;
+      animation: fadeInUp 0.6s ease forwards;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
   </style>
 </head>
 <body>
-  <h1>🔍 بحث عن بيانات الطالب</h1>
+
+  <header>
+    <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="GIF">
+    <h1>بحث عن بيانات الطالب</h1>
+  </header>
+
   <div class="container">
     <input type="text" id="studentCode" placeholder="أدخل كود الطالب">
     <button onclick="fetchData()">بحث</button>
@@ -96,7 +117,7 @@
               </div>
             `;
           } else {
-            resultDiv.innerHTML = `<p style="color:red; background:white; padding:10px; border-radius:8px;">${data.error}</p>`;
+            resultDiv.innerHTML = `<p style="color:red;">${data.error}</p>`;
           }
         })
         .catch(err => {
@@ -105,5 +126,6 @@
         });
     }
   </script>
+
 </body>
 </html>
