--- a/hdortalta.html
+++ b/hdortalta.html
@@ -154,8 +154,8 @@
               <h3>📋 حضور الطالب</h3>
               <p><strong>👦 اسم الطالب:</strong> ${data.name}</p>
               <p><strong>🧭 السنتر:</strong> ${data.geo}</p>
-              <p><strong>📅 الأسبوع 1:</strong> ${data.week1}</p>
-              <p><strong>📅 الأسبوع 2:</strong> ${data.week2}</p>
+              <p><strong>📅الحصه الاولي:</strong> ${data.week1}</p>
+              <p><strong>📅 الحصه التانيه:</strong> ${data.week2}</p>
             </div>
           `;
         } else {
