--- a/father.html
+++ b/father.html
@@ -194,7 +194,7 @@
         },
         grades: {
           "1": "https://www.mrfaisal.net/%D8%AF%D8%B1%D8%AC%D8%A7%D8%AA-2%D8%AB",
-          "2": "https://www.mrfaisal.net/النتيجه"
+          "2": "natigttaltathanwy.html"
         }
       };
 
