--- a/natigttaltathanwy.html
+++ b/natigttaltathanwy.html
@@ -2,7 +2,7 @@
 <html dir="rtl" lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>عرض الحضور</title>
+  <title>عرض النتيجه</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
   <style>
@@ -114,7 +114,7 @@
     <h2>الحضور خاص بـ <strong>مستر فيصل</strong></h2>
     <form id="attendanceForm">
       <input type="text" id="studentId" placeholder="🔑 أدخل كود الطالب" required>
-      <input type="submit" value="📊 عرض الحضور">
+      <input type="submit" value="📊 عرض النتيجه">
     </form>
     <div id="result"></div>
   </div>
@@ -128,7 +128,7 @@
       autoplay
       loop>
     </dotlottie-wc>
-    <div class="loading-text">جاري تحميل الحضور... ✅</div>
+    <div class="loading-text">جاري تحميل النتيجه... ✅</div>
   </div>
 
   <script>
@@ -154,8 +154,8 @@
               <h3>📋 حضور الطالب</h3>
               <p><strong>👦 اسم الطالب:</strong> ${data.name}</p>
               <p><strong>🧭 السنتر:</strong> ${data.geo}</p>
-              <p><strong>📅الحصه الاولي:</strong> ${data.week1}</p>
-              <p><strong>📅 الحصه التانيه:</strong> ${data.week2}</p>
+              <p><strong>📅امتحان الحصه الاولي:</strong> ${data.week1}</p>
+              <p><strong>📅امتحان الحصه التانيه :</strong> ${data.week2}</p>
             </div>
           `;
         } else {
