--- a/father.html
+++ b/father.html
@@ -193,7 +193,7 @@
           "2": "hdortalta.html"
         },
         grades: {
-          "1": "https://www.mrfaisal.net/%D8%AF%D8%B1%D8%AC%D8%A7%D8%AA-2%D8%AB",
+          "1": "ntigttanyathanwy.html",
           "2": "natigttaltathanwy.html"
         }
       };
