--- a/motaba.html
+++ b/motaba.html
@@ -142,7 +142,7 @@
         <h3>متابعة ولي الأمر</h3>
       </a>
 
-      <a href="https://www.mrfaisal.net/المتابعه-الخاصة-بنا/متابعه-الطالب" class="card" target="_blank">
+      <a href="talb.html" class="card" target="_blank">
         <div class="emoji">🧑‍🎓</div>
         <h3>متابعة الطالب</h3>
       </a>
