--- a/talb.html
+++ b/talb.html
@@ -10,46 +10,26 @@
       padding: 0;
       font-family: 'Cairo', sans-serif;
       min-height: 100vh;
+      background-color: white; /* ✅ خلفية بيضاء */
       overflow-y: auto;
-      background: #000;
-    }
-
-    video.bg-video {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      object-fit: cover;
-      filter: brightness(0.5);
     }
 
     .container {
-      position: relative;
-      z-index: 1;
       text-align: center;
-      color: white;
+      color: #333;
       padding: 20px;
     }
 
-    h1 {
-      font-size: clamp(1.5em, 5vw, 2.5em);
-      margin-bottom: 20px;
-      animation: pulse 2s infinite;
-    }
-
     .card {
-      background: rgba(255, 255, 255, 0.9);
+      background: rgba(255, 255, 255, 0.95);
       color: #333;
       display: inline-block;
       padding: 15px 25px;
       border-radius: 15px;
       cursor: pointer;
-      font-size: clamp(1.2em, 4vw, 1.5em);
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      font-size: 1.5em;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
       transition: transform 0.3s ease;
-      max-width: 90%;
     }
 
     .card:hover {
@@ -69,11 +49,9 @@
       border: none;
       border-radius: 10px;
       margin: 8px;
-      font-size: clamp(1em, 3.5vw, 1.2em);
+      font-size: 1.2em;
       cursor: pointer;
       transition: background-color 0.3s;
-      width: 90%;
-      max-width: 250px;
     }
 
     .option-btn:hover {
@@ -81,22 +59,22 @@
     }
 
     table {
-      width: 95%;
+      width: 90%;
+      max-width: 700px;
       margin: 30px auto 0;
-      background: rgba(255, 255, 255, 0.95);
+      background: white;
       border-radius: 15px;
       overflow: hidden;
       display: none;
       animation: slideInUp 1s ease-in-out;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
       border-collapse: collapse;
     }
 
     th, td {
       padding: 12px;
       text-align: center;
-      font-size: clamp(0.9em, 3vw, 1.2em);
-      word-wrap: break-word;
+      font-size: 1.1em;
     }
 
     th {
@@ -105,11 +83,17 @@
     }
 
     tr:nth-child(even) {
-      background-color: #f0f0f0;
+      background-color: #f9f9f9;
     }
 
     tr:nth-child(odd) {
       background-color: #ffffff;
+    }
+
+    h1 {
+      font-size: 2em;
+      margin-bottom: 20px;
+      animation: pulse 2s infinite;
     }
 
     @keyframes fadeIn {
@@ -127,53 +111,27 @@
       50% { transform: scale(1.05); }
     }
 
-    /* تحسين عرض الجدول على الشاشات الصغيرة */
+    /* تحسين العرض للموبايل */
     @media (max-width: 600px) {
-      table, thead, tbody, th, td, tr {
-        display: block;
+      .card {
+        font-size: 1.2em;
+        padding: 12px 20px;
       }
-
-      thead tr {
-        display: none;
+      .option-btn {
+        width: 100%;
+        font-size: 1em;
       }
-
-      tr {
-        background: white;
-        margin-bottom: 10px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      table {
+        width: 100%;
       }
-
-      td {
+      th, td {
+        font-size: 1em;
         padding: 10px;
-        text-align: right;
-        position: relative;
-        padding-right: 50%;
       }
-
-      td:before {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        font-weight: bold;
-        color: #6a5acd;
-      }
-
-      #secondTable td:nth-of-type(1):before { content: "الحصة"; }
-      #secondTable td:nth-of-type(2):before { content: "الدرس"; }
-      #secondTable td:nth-of-type(3):before { content: "الواجب"; }
-
-      #thirdTable td:nth-of-type(1):before { content: "الحصة"; }
-      #thirdTable td:nth-of-type(2):before { content: "الدرس"; }
-      #thirdTable td:nth-of-type(3):before { content: "الواجب"; }
     }
   </style>
 </head>
 <body>
-
-  <video class="bg-video" autoplay muted loop>
-    <source src="https://files.catbox.moe/1dldfl.mp4" type="video/mp4">
-  </video>
 
   <div class="container">
     <h1>اعرف وصلنا لفين واللحقنا</h1>
