--- a/moayed.html
+++ b/moayed.html
@@ -143,7 +143,7 @@
 <div class="cards-container">
 
   <!-- كارت تانية ثانوي -->
-  <a href="https://www.mrfaisal.net/المواعيد/مواعيد-تانيه-ثانوي" target="_blank" class="special-card" style="animation-delay: 0.2s; background: linear-gradient(135deg, #8e44ad, #9b59b6);">
+  <a href="moayedtanyathanwy" class="special-card" style="animation-delay: 0.2s; background: linear-gradient(135deg, #8e44ad, #9b59b6);">
     <div class="big-number">2</div>
     <div class="emoji">📆</div>
     <div class="text">مواعيد تانية ثانوي</div>
