--- a/moayed.html
+++ b/moayed.html
@@ -143,14 +143,14 @@
 <div class="cards-container">
 
   <!-- كارت تانية ثانوي -->
-  <a href="moayedtanyathanwy"target="_blank" class="special-card" style="animation-delay: 0.2s; background: linear-gradient(135deg, #8e44ad, #9b59b6);">
+  <a href="moayedtanyathanwy" target="_blank" class="special-card" style="animation-delay: 0.2s; background: linear-gradient(135deg, #8e44ad, #9b59b6);">
     <div class="big-number">2</div>
     <div class="emoji">📆</div>
     <div class="text">مواعيد تانية ثانوي</div>
   </a>
 
   <!-- كارت تالتة ثانوي -->
-  <a href="https://www.mrfaisal.net/%D8%A7%D9%84%D9%85%D9%88%D8%A7%D8%B9%D9%8A%D8%AF/%D9%85%D9%88%D8%A7%D8%B9%D9%8A%D8%AF-%D8%AA%D8%A7%D9%84%D8%AA%D9%87-%D8%AB%D8%A7%D9%86%D9%88%D9%8A" target="_blank" class="special-card" style="animation-delay: 0.4s; background: linear-gradient(135deg, #2980b9, #3498db);">
+  <a href="moayedtaltathanwy" target="_blank" class="special-card" style="animation-delay: 0.4s; background: linear-gradient(135deg, #2980b9, #3498db);">
     <div class="big-number">3</div>
     <div class="emoji">🗓️</div>
     <div class="text">مواعيد تالتة ثانوي</div>
