--- a/moayed.html
+++ b/moayed.html
@@ -150,7 +150,7 @@
   </a>
 
   <!-- كارت تالتة ثانوي -->
-  <a href="moayedtaltathanwy" target="_blank" class="special-card" style="animation-delay: 0.4s; background: linear-gradient(135deg, #2980b9, #3498db);">
+  <a href="moayedtaltathanwy.html" target="_blank" class="special-card" style="animation-delay: 0.4s; background: linear-gradient(135deg, #2980b9, #3498db);">
     <div class="big-number">3</div>
     <div class="emoji">🗓️</div>
     <div class="text">مواعيد تالتة ثانوي</div>
