--- a/moayedtaltathanwy.html
+++ b/moayedtaltathanwy.html
@@ -25,6 +25,7 @@
       text-align: center;
       z-index: 999;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      word-wrap: break-word; /* ✅ يمنع خروج النص */
     }
 
     h2 {
@@ -142,34 +143,35 @@
       100% { transform: scale(1.1); opacity: 1; }
     }
 
-    /* تحسين عرض الموبايل */
+    /* ✅ تحسين عرض الموبايل */
     @media (max-width: 500px) {
       .card, .time-card {
-        width: 100%;
+        width: 90%;
         height: auto;
+        padding: 15px;
       }
       .top-bar {
-        font-size: 15px;
-        padding: 10px;
+        font-size: 14px;
+        padding: 8px;
       }
       h2 {
-        font-size: 18px;
-        margin-bottom: 20px;
+        font-size: 16px;
+        margin-bottom: 15px;
       }
       .card h3 {
-        font-size: 18px;
+        font-size: 16px;
       }
       .card p {
-        font-size: 14px;
+        font-size: 13px;
       }
       .emoji {
-        font-size: 30px;
+        font-size: 28px;
       }
       .time-card h3 {
-        font-size: 18px;
+        font-size: 16px;
       }
       .time-card p {
-        font-size: 14px;
+        font-size: 13px;
       }
     }
   </style>
