--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>تواصل معنا</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- مهم للموبايل -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       background-color: #f4f0f8;
@@ -62,7 +62,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     .container {
@@ -165,18 +165,18 @@
 </head>
 <body>
 
-<!-- عنوان متحرك مع أيقونة -->
+<!-- GIF -->
+<div class="gif-container">
+  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
+  <dotlottie-wc src="https://lottie.host/06e99f44-ec18-4512-ad5a-0e81ffcaa640/paKTlRDkFS.lottie" style="width: 250px; height: 250px" speed="1" autoplay loop></dotlottie-wc>
+</div>
+
+<!-- عنوان متحرك تحت الـ GIF -->
 <div class="header-wrapper">
   <div class="header-title">
     <img src="https://img.icons8.com/ios-filled/50/ffffff/chat--v1.png" alt="دردشة">
     تواصل مع فريقنا
   </div>
-</div>
-
-<!-- GIF -->
-<div class="gif-container">
-  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
-  <dotlottie-wc src="https://lottie.host/06e99f44-ec18-4512-ad5a-0e81ffcaa640/paKTlRDkFS.lottie" style="width: 250px; height: 250px" speed="1" autoplay loop></dotlottie-wc>
 </div>
 
 <div class="container">
