--- a/start.html
+++ b/start.html
@@ -199,7 +199,7 @@
       <a href="motaba.html" class="button-link">المتابعة 📱</a>
       <a href="moayed.html" class="button-link">مواعيدنا ⏰</a>
       <a href="contact.html" class="button-link">الامتحانات 📝</a>
-      <a href="https://www.mrfaisal.net/%D8%A7%D8%B4%D8%AA%D8%B1%D9%8A-%D9%85%D9%86-%D8%B9%D9%86%D8%AF%D9%86%D8%A7" class="button-link">اشتري من عندنا 🛒</a>
+      <a href="track.html" class="button-link">اشتري من عندنا 🛒</a>
       <a href="contact.html" class="button-link">اسألنا سؤال 📞</a>
       <a href="https://www.mrfaisal.net/%D8%A7%D9%84%D8%B4%D9%83%D8%A7%D9%88%D9%8A" class="button-link">الشكاوي 📣</a>
     </div>
