--- a/track.html
+++ b/track.html
@@ -103,3 +103,23 @@
     popup.classList.add("show");
   }
 </script>
+
+<style>
+  /* تحسين التوافق مع الموبايل */
+  @media (max-width: 768px) {
+    input, select, button, textarea {
+      width: 100% !important;
+      font-size: 16px !important;
+    }
+    video, img {
+      max-width: 100% !important;
+      height: auto !important;
+    }
+    #orderForm {
+      padding: 10px !important;
+    }
+    .loading-msg {
+      font-size: 18px !important;
+    }
+  }
+</style>
