--- a/track.html
+++ b/track.html
@@ -1,3 +1,110 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>شراء المنتج</title>
+<style>
+  body {
+    font-family: 'Cairo', sans-serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  video {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+  }
+  form {
+    max-width: 500px;
+    margin: auto;
+    background: #f9f9f9;
+    padding: 15px;
+    border-radius: 10px;
+  }
+  input, select, button {
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0;
+    font-size: 16px;
+  }
+  #successPopup {
+    position: fixed;
+    bottom: -100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #aaa;
+    transition: bottom 0.3s ease;
+    width: 90%;
+    max-width: 350px;
+    text-align: center;
+  }
+  #successPopup.show {
+    bottom: 20px;
+  }
+  .loading-msg {
+    font-size: 18px;
+  }
+  @keyframes bounce {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-5px); }
+  }
+</style>
+</head>
+<body>
+
+<!-- أزرار اختيار المنتج -->
+<button onclick="startOrder('third')">📘 مذكرة الصف الثالث الثانوي</button>
+<button onclick="startOrder('second')">📙 مذكرة الصف الثاني الثانوي</button>
+<button onclick="startOrder('akodna')">💻 أكوادنا</button>
+
+<!-- الفيديوهات والملاحظات -->
+<div id="video_third" style="display:none;">
+  <video controls>
+    <source src="https://files.catbox.moe/lgvvn8.mp4" type="video/mp4">
+  </video>
+</div>
+<div id="note_third" style="display:none;">ملاحظات مذكرة الصف الثالث الثانوي</div>
+
+<div id="video_second" style="display:none;">
+  <video controls>
+    <source src="https://files.catbox.moe/lgvvn8.mp4" type="video/mp4">
+  </video>
+</div>
+<div id="note_second" style="display:none;">ملاحظات مذكرة الصف الثاني الثانوي</div>
+
+<div id="video_akodna" style="display:none;">
+  <video controls>
+    <source src="https://files.catbox.moe/lgvvn8.mp4" type="video/mp4">
+  </video>
+</div>
+<div id="note_akodna" style="display:none;">ملاحظات الأكواد</div>
+
+<!-- نموذج الطلب -->
+<form id="orderForm" style="display:none;">
+  <input type="text" id="name" placeholder="الاسم" required>
+  <input type="text" id="gov" placeholder="المحافظة" required>
+  <input type="tel" id="phone1" placeholder="رقم الهاتف" required>
+  <input type="text" id="address" placeholder="العنوان">
+  <select id="codeType" style="display:none;">
+    <option value="">اختر نوع الكود</option>
+    <option value="كود 1">كود 1</option>
+    <option value="كود 2">كود 2</option>
+  </select>
+  <input type="text" id="paymentNumber" placeholder="رقم التحويل عبر فودافون كاش" required>
+  <input type="file" id="paymentProof" accept="image/*" required>
+  <button type="button" onclick="submitOrder()">يلا اشتري</button>
+</form>
+
+<!-- البوب أب -->
+<div id="successPopup">
+  <div id="popupMessage"></div>
+</div>
+
 <script>
   const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxNhAfhsY_FRU9UsoK61HzMr_ATVn02xtmrb8hFEny06RlpmGxcdKYWXl5sQwyoOVoD/exec"
   const formData = {
@@ -103,23 +210,5 @@
     popup.classList.add("show");
   }
 </script>
-
-<style>
-  /* تحسين التوافق مع الموبايل */
-  @media (max-width: 768px) {
-    input, select, button, textarea {
-      width: 100% !important;
-      font-size: 16px !important;
-    }
-    video, img {
-      max-width: 100% !important;
-      height: auto !important;
-    }
-    #orderForm {
-      padding: 10px !important;
-    }
-    .loading-msg {
-      font-size: 18px !important;
-    }
-  }
-</style>
+</body>
+</html>
