--- a/track.html
+++ b/track.html
@@ -10,11 +10,12 @@
     margin: 0;
     padding: 0;
     text-align: center;
+    background: #fff;
   }
   video {
     max-width: 100%;
     height: auto;
-    margin-bottom: 10px;
+    margin: 10px 0;
   }
   form {
     max-width: 500px;
@@ -42,6 +43,7 @@
     width: 90%;
     max-width: 350px;
     text-align: center;
+    z-index: 9999;
   }
   #successPopup.show {
     bottom: 20px;
@@ -52,6 +54,19 @@
   @keyframes bounce {
     0%, 100% { transform: translateY(0); }
     50% { transform: translateY(-5px); }
+  }
+  /* توافق الموبايل */
+  @media (max-width: 768px) {
+    form {
+      padding: 10px;
+    }
+    input, select, button {
+      font-size: 14px;
+      padding: 7px;
+    }
+    .loading-msg {
+      font-size: 16px;
+    }
   }
 </style>
 </head>
@@ -210,5 +225,6 @@
     popup.classList.add("show");
   }
 </script>
+
 </body>
 </html>
